<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="horizontal"
    android:background="@drawable/comidafondo"
    tools:context="ec1app.activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="35dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="26dp"
                android:text="@string/register_app_name"
                android:fontFamily="@font/dynapuffvariabe"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.457" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:layout_marginEnd="44dp"
                android:src="@drawable/register_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/register_title"
            android:fontFamily="@font/promptsemibold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="31sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_inputLayout_dni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:hint="@string/register_dni_input_hint"
            android:layout_marginTop="0dp"

            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:startIconTint="@color/black"
            app:startIconContentDescription="@string/register_dni_input_content_description_end_icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="3dp"
            app:errorEnabled="true"
            app:cornerRadius="25dp"
            app:errorIconDrawable="@drawable/ic_baseline_error">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_input_dni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="8"
            app:cornerRadius="25dp"
            android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_dni"
            android:layout_width="164dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:padding="10dp"
            android:text="@string/register_button_dni"
            app:cornerRadius="30dp"
            app:icon="@drawable/ic_baseline_person_search"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_inputLayout_fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:hint="@string/register_fullName_input_hint"
            android:layout_marginTop="12dp"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:startIconTint="@color/black"
            app:startIconContentDescription="@string/register_fullName_input_content_description_end_icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="3dp"
            app:errorEnabled="true"
            app:cornerRadius="25dp"
            app:errorIconDrawable="@drawable/ic_baseline_error">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_input_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="25dp"
                android:inputType="text"
                android:enabled="false"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_inputLayout_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:hint="@string/register_nickname_input_hint"
            android:layout_marginTop="0dp"
            app:startIconDrawable="@drawable/ic_baseline_person_pin_24"
            app:startIconTint="@color/black"
            app:startIconContentDescription="@string/register_nickname_input_content_description_end_icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="3dp"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_baseline_error">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_input_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/black"
                android:enabled="false"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_inputLayout_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:hint="@string/register_phoneNumber_input_hint"
            android:layout_marginTop="0dp"
            app:startIconDrawable="@drawable/ic_baseline_phone_24"
            app:startIconTint="@color/black"
            app:startIconContentDescription="@string/register_phoneNumber_input_content_description_end_icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="3dp"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_baseline_error">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_input_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="9"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_inputLayout_adrees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:hint="@string/register_adress_input_hint"
            android:layout_marginTop="0dp"
            app:startIconDrawable="@drawable/ic_baseline_location_on"
            app:startIconTint="@color/black"
            app:startIconContentDescription="@string/register_adress_input_content_description_end_icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="3dp"
            app:errorEnabled="true"
            app:cornerRadius="25dp"
            app:errorIconDrawable="@drawable/ic_baseline_error"
            app:helperText="Solo para el Distrito de SJL"
            app:helperTextTextColor="@color/black">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_input_adress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="25dp"
            android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_inputLayout_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:hint="@string/register_date_input_hint"
            android:layout_marginTop="0dp"
            app:startIconDrawable="@drawable/ic_baseline_date_range"
            app:startIconTint="@color/black"
            app:startIconContentDescription="@string/register_date_input_content_description_end_icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="3dp"
            app:errorEnabled="true"
            app:cornerRadius="25dp"
            app:errorIconDrawable="@drawable/ic_baseline_error">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_input_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_inputLayout_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:hint="@string/register_email_input_hint"
            android:layout_marginTop="0dp"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:startIconTint="@color/black"
            app:startIconContentDescription="@string/register_email_input_content_description_end_icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="3dp"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_baseline_error"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_input_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_inputLayout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:hint="@string/register_password_input_content_description_end_icon"
            android:layout_marginTop="0dp"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/black"
            app:startIconContentDescription="@string/register_password_input_content_description_end_icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="3dp"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:errorIconDrawable="@drawable/ic_baseline_error"
            app:helperText="La contraseña debe tener más de 6 digitos"
            app:helperTextTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:text="@string/register_button"
            app:cornerRadius="20dp"
            android:layout_marginTop="15dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7dp"
                android:text="¿Tienes una cuenta?"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/textLogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="14dp"
                android:text="Iniciar Sesión"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/titleghost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="13dp"
                android:text="Mis Pedidos"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="1dp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>